tests/ui/derive/fail_foundry_id_variant_fields.stderr
error: FoundryId can only be derived for fieldless enum variants
 --> tests/ui/derive/fail_foundry_id_variant_fields.rs:6:5
  |
6 |     Api(String),
  |     ^^^^^^^^^^^
